--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,8 @@ dist
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# Azurite artifacts
+__blobstorage__
+__queuestorage__
+__azurite_db*__.json
