--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "name": "bun-koyeb-matto",
-  "module": "server.ts",
+  "module": "src/server.ts",
   "type": "module",
+  "scripts": {
+    "start": "docker run --name bun-koyeb-matto -p 3000:3000 bun-koyeb-matto",
+    "dev": "bun src/server.ts",
+    "build": "docker build . -t bun-koyeb-matto",
+    "lint": "eslint --ext .ts src",
+    "lint:fix": "eslint --ext .ts src --fix",
+    "prettier": "prettier --write \"src/**/*.ts\""
+  },
+  "dependencies": {
+    "mongoose": "^8.0.3",
+    "sharp": "^0.33.1",
+    "zod": "^3.22.4"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
