--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,14 +5,16 @@
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "simple-import-sort"],
   "root": true,
   "rules": {
     "@typescript-eslint/consistent-type-imports": [
       "error",
       { "fixStyle": "inline-type-imports" }
     ],
+    "func-style": ["error", "expression", { "allowArrowFunctions": true }],
     "prefer-arrow-callback": ["error", { "allowNamedFunctions": true }],
-    "func-style": ["error", "expression", { "allowArrowFunctions": true }]
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error"
   }
 }
