--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.17.0",
     "@bugsnag/js": "^7.22.2",
     "mongoose": "^8.0.3",
     "sharp": "^0.33.1",
