--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@bugsnag/js": "^7.22.2",
     "mongoose": "^8.0.3",
     "sharp": "^0.33.1",
-    "zod": "^3.22.4"
+    "svgo": "^3.1.0",
+    "zod": "^3.22.4",
+    "zod-validation-error": "^2.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.15.0",
