update packages and lint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,21 @@
 {
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/strict-type-checked",
+    "plugin:perfectionist/recommended-natural",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "simple-import-sort"],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "plugins": ["@typescript-eslint"],
   "root": true,
   "rules": {
-    "@typescript-eslint/consistent-type-imports": [
-      "error",
-      { "fixStyle": "inline-type-imports" }
-    ],
+    "@typescript-eslint/consistent-type-exports": "error",
+    "@typescript-eslint/consistent-type-imports": "error",
+    "@typescript-eslint/no-import-type-side-effects": "error",
     "func-style": ["error", "expression", { "allowArrowFunctions": true }],
-    "prefer-arrow-callback": ["error", { "allowNamedFunctions": true }],
-    "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
+    "prefer-arrow-callback": ["error", { "allowNamedFunctions": true }]
   }
 }
