--- a/package.json
+++ b/package.json
@@ -6,27 +6,28 @@
     "start": "docker run --name bun-koyeb-matto -p 3000:3000 bun-koyeb-matto",
     "dev": "bun src/server.ts",
     "build": "docker build . -t bun-koyeb-matto",
-    "lint": "eslint --ext .ts src",
-    "lint:fix": "eslint --ext .ts src --fix",
-    "prettier": "prettier --write \"src/**/*.ts\""
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "prettier": "prettier --write"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
-    "@bugsnag/js": "^7.22.2",
+    "@bugsnag/js": "^7.22.3",
     "mongoose": "^8.0.3",
     "sharp": "^0.33.1",
-    "svgo": "^3.1.0",
+    "svgo": "^3.2.0",
     "zod": "^3.22.4",
     "zod-validation-error": "^2.1.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "bun-types": "1.0.20",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
+    "bun-types": "1.0.21",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^3.1.1"
+    "eslint-plugin-perfectionist": "^2.5.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-sort-json": "^3.1.0"
   },
   "peerDependencies": {
     "typescript": "^5.3.3"
