--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
     "strict": true,
     "target": "es2022",
     "types": [
-      "bun-types" // add Bun global
-    ]
+      "bun-types", // add Bun global
+    ],
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
 }
