--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "zod-validation-error": "^3.0.0"
   },
   "devDependencies": {
+    "@types/bun": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
-    "bun-types": "1.0.25",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-perfectionist": "^2.5.0",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "prettier-plugin-sort-json": "^3.1.0"
   },
   "peerDependencies": {
