--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/strict-type-checked",
     "plugin:@typescript-eslint/stylistic-type-checked",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
     "plugin:perfectionist/recommended-natural",
     "prettier"
   ],
@@ -10,7 +12,7 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "import"],
   "root": true,
   "rules": {
     "@typescript-eslint/consistent-type-exports": "error",
@@ -18,5 +20,11 @@
     "@typescript-eslint/no-import-type-side-effects": "error",
     "func-style": ["error", "expression", { "allowArrowFunctions": true }],
     "prefer-arrow-callback": ["error", { "allowNamedFunctions": true }]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": true,
+      "typescript": true
+    }
   }
 }
