--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-perfectionist": "^2.5.0",
     "prettier": "^3.2.5",
     "prettier-plugin-sort-json": "^3.1.0"
