--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "build": "docker build . -t bun-koyeb-matto",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "prettier": "prettier --write"
+    "format": "prettier --write"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
     "@bugsnag/js": "^7.22.4",
-    "mongoose": "^8.1.3",
+    "mongoose": "^8.2.0",
     "sharp": "^0.33.2",
     "svgo": "^3.2.0",
     "zod": "^3.22.4",
     "zod-validation-error": "^3.0.2"
   },
   "devDependencies": {
-    "@types/bun": "^1.0.6",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "eslint": "^8.56.0",
+    "@types/bun": "^1.0.7",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
