update packages, fix lint

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,4 @@
 {
   "jsonRecursiveSort": true,
-  "plugins": ["prettier-plugin-sort-json"]
+  "plugins": ["prettier-plugin-sort-json", "prettier-plugin-packagejson"]
 }
